# heddle

./: .gitignore  .reality-check  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  gen_rsshub.py  heddle_dashboard.py  heddle_stdio_mesh.py  loom-dashboard.service  loom-intel-bridge.service  loom_dashboard.py  loom_stdio.py  loom_stdio_mesh.py  loom_stdio_prometheus.py  pyproject.toml  start_agent.sh
.github/workflows/: ci.yml
agents/: ai-platform-bridge.yaml  daily-ops.yaml  gitea-api-bridge.yaml  gitea-bridge.yaml  grafana-bridge.yaml  intel-rag-bridge.yaml  nexus-bridge.yaml  ollama-bridge.yaml  prometheus-bridge.yaml  rsshub-bridge.yaml  uptime-kuma-bridge.yaml  vram-orchestrator.yaml  weft-intel-bridge.yaml
docs/: MILESTONE-v0.2.md  security-controls.md  threat-model.md
docs/decisions/: 001-yaml-for-agent-definitions.md  002-fastmcp-over-raw-mcp-sdk.md  003-sqlite-for-registry.md  README.md
packs/: README.md  git-forge.yaml  grafana.yaml  ollama.yaml  prometheus.yaml  radarr.yaml  sonarr.yaml
src/heddle/: __init__.py  cli.py  dashboard.py  stdio_mesh.py
src/heddle/agents/: daily_ops.py  vram_orchestrator.py  weft_dev.py
src/heddle/config/: __init__.py  loader.py  schema.py
src/heddle/evolve/: __init__.py  scanner.py
src/heddle/generator/: __init__.py  agent_gen.py  discover.py  llm.py
src/heddle/mcp/: __init__.py  client.py  registry.py  server.py
src/heddle/runtime/: __init__.py  engine.py  multi.py
src/heddle/security/: __init__.py  anomaly.py  audit.py  credentials.py  (+5 more)
src/loom/: __init__.py  cli.py
tests/: test_anomaly.py  test_config.py  test_escalation.py  test_generator.py  test_hardening.py  test_mcp.py  test_mesh.py  test_registry.py  test_security.py
(+30 files in other folders)
